--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-figure:hover{
+figure:hover {
     cursor: pointer;
 }
 
@@ -42,4 +42,13 @@ header h2 {
     position: absolute;
     top: 60px;
     background-color: gray;
+}
+
+#hero {
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: aqua;
 }
