--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -1,7 +1,7 @@
-:root{
+:root {
     --colorWhite: rgba(255, 255, 255, 0.918);
     --colorBlack: rgb(51, 50, 50);
-    --colorBg01:rgba(149, 210, 214, 0.7);
+    --colorBg01: rgba(149, 210, 214, 0.7);
 }
 
 * {
@@ -57,22 +57,22 @@ header h2 {
     flex-direction: column;
     height: 40vh;
     width: 100%;
-    background:linear-gradient(rgb(21, 139, 218), rgb(101, 218, 226));
+    background: linear-gradient(rgb(21, 139, 218), rgb(101, 218, 226));
 }
 
-#hero h3{
+#hero h3 {
     font-size: 34px;
 }
 
-#hero p{
+#hero p {
     font-size: 30px;
 }
 
-button:hover{
+button:hover {
     cursor: pointer;
 }
 
-#hero button{
+#hero button {
     margin-top: 1.2rem;
     height: 50px;
     width: 20vh;
@@ -82,4 +82,29 @@ button:hover{
     font-size: 1.4rem;
     color: white;
     font-weight: bold;
+}
+
+.container {
+
+    display: flex;
+    flex-wrap: wrap;
+
+    padding: 1rem;
+
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.card{
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.card img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.info-card img{
+    width: 30%;
 }
