--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -85,26 +85,49 @@ button:hover {
 }
 
 .container {
-
   display: flex;
   flex-wrap: wrap;
-
   padding: 1rem;
-
   row-gap: 1rem;
   column-gap: 1rem;
 }
 
 .card {
+  border: 2px solid rgb(78, 199, 207);
+  border-radius: 20px;
   flex-grow: 1;
   flex-shrink: 0;
 }
 
 .card img {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 20px;
+}
+
+.info-card{
+  border-radius: 20px;
+  margin-top: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .info-card img {
-  width: 30%;
+  width: 26%;
+}
+
+.info-card button{
+  border: none;
+  border-radius: 10px;
+  background-color: aqua;
+  width: 180px;
+  height: 40px;
+}
+
+.info-card a{
+  text-decoration: none;
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
 }
