--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -44,10 +44,31 @@ header h2 {
 }
 
 #cartshopp {
-  display: none;
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  top: 60px;
+  top: 52px;
+  right: 0;
+  width: 90%;
+  height: auto;
   background-color: gray;
+}
+
+.vaciarCart{
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 30px;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: aqua;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #hero {
@@ -104,7 +125,7 @@ button:hover {
   border-radius: 20px;
 }
 
-.info-card{
+.info-card {
   border-radius: 20px;
   margin-top: 10px;
   padding: 10px;
@@ -117,7 +138,7 @@ button:hover {
   width: 26%;
 }
 
-.info-card button{
+.info-card button {
   border: none;
   border-radius: 10px;
   background-color: aqua;
@@ -125,7 +146,7 @@ button:hover {
   height: 40px;
 }
 
-.info-card a{
+.info-card a {
   text-decoration: none;
   font-size: 16px;
   color: rgb(0, 0, 0);
