--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -44,15 +44,19 @@ header h2 {
 }
 
 #cartshopp {
-  display: flex;
-  flex-direction: column;
+  padding-top: 15px;
   position: absolute;
-  top: 52px;
-  right: 0;
-  width: 90%;
-  height: auto;
-  background-color: gray;
+  top: 55px;
+  right: 5px;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: rgb(235, 234, 234);
 }
+
+#cartshopp thead{
+  
+}
+
 
 .vaciarCart{
   display: flex;
@@ -63,12 +67,11 @@ header h2 {
   height: 30px;
   border-radius: 10px;
   text-decoration: none;
-  color: black;
+  text-shadow: 1px 1px black;
+  color: rgb(235, 234, 234);
   font-size: 18px;
   font-weight: bold;
-  background-color: aqua;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  background-color: rgb(233, 66, 54);
 }
 
 #hero {
