--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -49,14 +49,22 @@ header h2 {
   top: 55px;
   right: 5px;
   padding: 15px;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: rgb(235, 234, 234);
 }
 
-#cartshopp thead{
-  
+table{
+  width: 100%;
+}
+table th{
+  border-bottom: solid 2px black;
+  padding: 8px;
 }
 
+table td{
+  padding: 10px;
+  text-align: center;
+}
 
 .vaciarCart{
   display: flex;
