--- a/js/CartShop/styles.css
+++ b/js/CartShop/styles.css
@@ -66,6 +66,15 @@ table td{
   text-align: center;
 }
 
+.borrar-curso{
+  font-size: 1.2rem;
+  color: white;
+  text-decoration: none;
+  background-color: rgb(236, 72, 72);
+  padding: 5px;
+  border-radius: 50%;
+}
+
 .vaciarCart{
   display: flex;
   margin: auto;
