--- a/js/Login/styles.css
+++ b/js/Login/styles.css
@@ -3,3 +3,14 @@
     padding: 0;
     background-color: rgb(177, 172, 172);
 }
+
+body{
+    display: grid;
+    width: 100%;
+    height: 100vh;
+}
+
+main{
+    margin: auto;
+}
+
