--- a/js/Login/styles.css
+++ b/js/Login/styles.css
@@ -14,3 +14,9 @@ main{
     margin: auto;
 }
 
+#login form{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
