--- a/js/Login/styles.css
+++ b/js/Login/styles.css
@@ -1,3 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+main{
+    display: grid;
+    width: auto;
+    height: 100vh;
+}
+
+#login{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 
 
 #bars{
