--- a/js/Login/styles.css
+++ b/js/Login/styles.css
@@ -7,12 +7,68 @@ main{
     display: grid;
     width: auto;
     height: 100vh;
+    background-color: rgba(70, 68, 68, 0.5);
 }
 
 #login{
+    width: auto;
+    height: 450px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: auto;
+    background-color: rgba(36, 35, 35, 0.9);
+    padding: 20px;
+    border-radius: 20px;
+}
+
+i{
+    display: block;
+    font-size: 120px;
+    border-radius: 50%;
+    background-color: #dee4e1;
+    padding: 20px;
+}
+
+.content h1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+}
+
+.user{
+    margin-bottom: 10px;
+}
+
+.DivPassword{
+    margin-bottom: 5px;
+}
+
+#strength{
+    color: white;
+}
+
+.content p{
+    color: #d9e4de;
+    padding: 8px;
+}
+
+.formLogin{
+    display: flex;
+    flex-direction: column;
+}
+
+
+input{
+    border: none;
+    outline: none;
+    color: white;
+    width: 100%;
+    height: 30px;
+    text-align: initial;
+    background-color: rgba(97, 94, 94, 0.3);
+    border-radius: 6px;
+    padding-left: 5px;
 }
 
 
