login teminado falta validar campos

--- a/js/Login/styles.css
+++ b/js/Login/styles.css
@@ -71,6 +71,18 @@ input{
     padding-left: 5px;
 }
 
+#loginBtn:hover{
+    cursor: pointer;
+}
+
+#loginBtn{
+    margin-top: 20px;
+    height: 36px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: none;
+}
+
 
 #bars{
     display: flex;
