pasar funciones por props

--- a/React/React_03/src/index.css
+++ b/React/React_03/src/index.css
@@ -5,3 +5,10 @@ body {
   display: grid;
   place-content: center;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 150px;
+}
