--- a/React/React05/src/App.css
+++ b/React/React05/src/App.css
@@ -1,9 +1,3 @@
-*{
-  margin:0;
-  padding: 0;
-  background: rgba(0, 0, 0);
-}
-
 main{
   display: flex;
   flex-direction: column;
@@ -11,5 +5,18 @@ main{
   max-width: 800px;
   margin: 0 auto;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #f8f8f8;
+  gap: 2rem;
+}
+
+section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  text-align: center;
+}
+
+section img{
+  max-width: 320px;
+  height: auto;
 }
