--- a/React/app-react-2/src/index.css
+++ b/React/app-react-2/src/index.css
@@ -19,3 +19,7 @@ body {
 ::-webkit-scrollbar-thumb{
   @apply bg-rose-300 rounded-xl
 }
+
+.task > ::-webkit-scrollbar-thumb {
+  @apply bg-sky-500 rounded-xl
+}
